--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.9.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tanstack/react-table": "^8.21.3",
     "@tremor/react": "^3.18.7",
     "@types/react-big-calendar": "^1.8.9",
     "axios": "^1.8.4",
@@ -26,7 +33,7 @@
     "moment": "^2.30.1",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.25",
-    "react": "^18",
+    "react": "^19.1.0",
     "react-big-calendar": "^1.13.2",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.3.0",
