--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.9.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@tanstack/react-table": "^8.21.3",
     "@tremor/react": "^3.18.7",
     "@types/react-big-calendar": "^1.8.9",
+    "add": "^2.0.6",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dialog": "^0.3.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -33,6 +41,8 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "recharts": "^2.12.7",
+    "shadcn": "^2.6.0",
+    "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
