--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-slick": "^0.30.3",
     "recharts": "^2.12.7",
     "shadcn": "^2.6.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
@@ -52,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
